# workshop-jupyter-kedro

./: OpenRepair quick EDA.ipynb  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_clsdata_processing.yml
src/openrepair/: __init__.py  pipeline_registry.py  settings.py
src/openrepair/pipelines/data_processing/: nodes.py  pipeline.py
src/openrepair/pipelines/data_science/: nodes.py  pipeline.py
